# JUCEAudioPluginTemplate

./: .gitignore  CMakeLists.txt  README.md  build.sh
Source/: PluginProcessor.cpp
